fixed track list spacing issues on small screens

--- a/src/css/css-00-base.css
+++ b/src/css/css-00-base.css
@@ -213,6 +213,8 @@ footer .copyright-copy, footer .copyright-last-year {
 	border-bottom: 1px solid #888;
 	border-bottom-right-radius: 0.8em;
 	padding: 0 0.5em 0.2em 0.1em;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .content-404 {text-align: center;}
@@ -277,6 +279,7 @@ footer .copyright-copy, footer .copyright-last-year {
 
 .content-discography .album-cover {
 	height: 10em;
+	margin-right: 1.33em;
 	overflow: hidden;
 	width: 11em;
 }
@@ -289,13 +292,17 @@ footer .copyright-copy, footer .copyright-last-year {
 
 .content-discography .album-tracks {
 	flex: auto;
-	margin: 2em 0 0 2.5em;
-	padding-left: 0;
+	padding-left: 20px;
 	text-align: left;
 }
 .content-discography .album-tracks li {margin: 4px 0;}
-.content-discography .album-tracks a {
+.content-discography .album-tracks .track-title {
 	display: inline-block;
 	vertical-align: top;
-	width: 85%;
+	width: calc(100% - 50px);
+}
+.content-discography .album-tracks .track-length {
+	display: inline-block;
+	text-align: right;
+	width: 45px;
 }
