--- a/src/css/css-01-xs.css
+++ b/src/css/css-01-xs.css
@@ -94,7 +94,7 @@
 /*============== Content ==============*/
 	/* 100% - header-height - padding - footer - player */
 	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 3em);}
-	.content {padding: 1.33em 1em 0.67em;}
+	.content {padding: 1.33em 0.67em;}
 
 
 /*============== Player ==============*/
@@ -115,6 +115,7 @@
 	}
 	footer .copyright {margin-right: 5px;}
 
+
 /*============== Pages ==============*/
 	.content-tune h2, .content-tune h5, .content-tune .tune-links {text-align: center;}
 	.content-tune .tune-links li {
@@ -124,9 +125,9 @@
 
 	.content-discography .album-contents-wrapper {flex-flow: column;}
 	.content-discography .album-cover {
+		margin: 0;
 		min-width: 11em;
 		text-align: center;
 		width: auto;
 	}
-	.content-discography .album-tracks {margin-right: 1.5em;}
 }
